--- a/rating/css/stylesheet.css
+++ b/rating/css/stylesheet.css
@@ -8,6 +8,7 @@
   height: 100%;
   margin: auto;
   text-align: center;
+  border-radius: 5%
 
 
 }
@@ -37,7 +38,7 @@ button {
   background-color: #000;
   text-align: center;
   cursor: pointer;
-  width: 100%;
+  width: 30%;
   font-size: 18px;
 }
 
@@ -45,6 +46,7 @@ a {
   text-decoration: none;
   font-size: 22px;
   color: black;
+  margin-top: 40px;
 }
 
 button:hover, a:hover {
@@ -54,6 +56,50 @@ button:hover, a:hover {
 .checked {
   color: rgb(246, 200, 9);
 }
+
+.fa-star{
+  font-size: 30px;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    border-radius: 7%
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 i {
   border: solid black;
@@ -90,9 +136,16 @@ i {
     height: auto;
 }
 
+.show {
+  display: block;
+}
+.hidden {
+  display: none;
+}
 
-
-
+.leftArrow{
+  text-align: center;
+}
 
 
 /* Bottom ratings*/
@@ -104,9 +157,7 @@ i {
 body {
   font-family: Arial;
   margin: 0 auto;
-  /* Center website */
   max-width: 800px;
-  /* Max width */
   padding: 20px;
 }
 
